<resources>
    <string name="app_name">Lyaschenko_RA_2</string>
    <string name="apples">Яблоки</string>
    <string name="orange">Мандарины</string>
    <string name="bananas">Бананы</string>
    <string name="lemons">Лимоны</string>
    <string name="select_product">Выберите продукт:</string>
    <string name="select_amount">Выберите количество: </string>
    <string name="submit">Готово</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
</resources>